--- a/style.css
+++ b/style.css
@@ -18,18 +18,48 @@ header{
     width: 100%;
 }
 
+
+#main-container{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    flex-wrap: wrap;
+
+}
 .show-container{
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     border: 3px solid red;
     border-radius: 10px;
     width: 300px;
-    height: 300px;
+    height: 600px;
+    align-items: center;
+    justify-content: center;
+
     
     
 }
 
+.show-container button {
+    height: 30px;
+    width: 30px;
+    margin: 0px;
+    padding: 0px;
+    display: flex;
+    flex-wrap: wrap;
+
+}
 
 img{
-    width: 300px;
+    width: 250px;
+}
+
+.strong-title{
+
+    display: flex;
+    margin: 0px;
+    padding-bottom: 20px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: x-large;
 }
