--- a/style.css
+++ b/style.css
@@ -63,3 +63,37 @@ img{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: x-large;
 }
+
+#floating-input {
+
+    position: fixed;
+    top: 50%;
+    bottom: 50%;
+    transform: translate(-50%, -50%);
+    background-color: bisque;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    display: none;
+}
+
+#floating-input input, #floating-input button{
+
+    margin: 5px;
+    padding: 8px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+#floating-input button{
+
+    background-color: brown;
+    color: white;
+    cursor: pointer;
+
+}
+
+#floating-input button:hover{
+    background-color: azure;
+}
